@@ -45,6 +45,10 @@ Release date: TBA
 
 * Fix false positive for ``protected-access`` if a protected member is used in type hints of function definitions
 
+* Fix false positive ``dict-iter-missing-items`` for dictionaries only using tuples as keys
+
+  Closes #3282
+
 
 What's New in Pylint 2.10.3?
 ============================
